[package]
name = "image-blend-rs"
version = "0.1.0"
edition = "2021"
authors = ["Seb Smith"]
description = "A library adding common and custom blending modes, also known as channel operations or chops to the image crate"
license = "MIT OR Apache-2.0"
readme = "readme.md"
keywords = [
    "image",
    "image-rs",
    "blend",
    "imagechops",
    "channel-operations",
    "blending-modes",
]

[profile.dev]
debug = true

[dependencies]
image = "0.25.2"
itertools = "0.13.0"
num-traits = "0.2.19"
thiserror = "1.0.63"

# Optional
rayon = {version = "1.10.0", optional = true}

[dev-dependencies]
rayon = "1.10.0"

[features]
default = ["rayon"]
