[package]
name = "image-blend"
version = "0.1.0"
edition = "2021"
authors = ["Seb Smith"]
description = "Type-agnostic support for image blending operations (add, multiply, screen, etc) for the image crate. Support for custom blends and utils for alpha channel manipulation."
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/Seb105/image-blend-rs"
keywords = [
    "image",
    "blend",
    "imagechops",
    "blending-modes",
    "alpha"
]

[profile.dev]
debug = true

[dependencies]
image = "0.25.2"
num-traits = "0.2.19"
thiserror = "1.0.63"

[dev-dependencies]
rayon = "1.10.0"
